infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: laravel-test.org
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: laravel-srv
                port:
                  number: 9000
    - host: mysql-test.org
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mysql-srv
                port:
                  number: 8080
    - host: nodejs-test.org
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-test-srv
                port:
                  number: 4000
    - host: k8s-client.org
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-client-srv
                port:
                  number: 3000
    - host: nodejs-chat-service
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-chat-service
                port:
                  number: 2345
    - host: pma-service
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pma-service
                port:
                  number: 80
    - host: redis-test.org
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: redis-master-service
                port:
                  number: 6379
